--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "crypto": "^1.0.1",
     "email-validator": "^2.0.4",
     "express": "^4.17.3",
+    "express-session": "^1.17.3",
     "http-status-code": "^2.1.0",
     "http-status-codes": "^2.2.0",
     "mongodb": "^4.5.0",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
